--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </h1>
 
     <h2>
-      We&rsquo;re a small team in a big San Francisco loft, making web apps.
+      We&rsquo;re a small team in a big San Francisco loft, making big web apps.
     </h2>
+
+    <!-- <img src="/images/burrito.jpg" /> -->
 
     <div id="team">
       <h3>The Magic Ingredients.</h3>
@@ -32,13 +34,15 @@
 
     <div id="investors">
       <h3>
-        Our Awesome Investors.
+        Our Awesome Investors. (names embargoed until announcement)
       </h3>
       <ul>
         <li><a href="http://twitter.com/investor1">Investor Numero Uno</a></li>
         <li><a href="http://twitter.com/investor2">Investor Numero Dos</a></li>
       </ul>
     </div>
+
+    <hr />
 
     <ul id="footer">
       <li><a href="http://twitter.com/burritovoltron">We Tweet.</a></li>
