--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>
-      We are BURRITO VOLTRON - Kicking Apps Since 1874
+      We&rsquo;re BURRITO VOLTRON.
     </title>
+    <link rel="stylesheet" href="/stylesheets/master.css" />
   </head>
 
   <body>
 
     <h1>
-      We are BURRITO VOLTRON - Kicking Apps Since 1874
+      We&rsquo;re BURRITO VOLTRON.
     </h1>
 
     <h2>
-      We&rsquo;re a small team in a big San Francisco loft, making big web apps.
+      A small team in a San Francisco loft, making big web apps.
     </h2>
 
     <!-- <img src="/images/burrito.jpg" /> -->
@@ -23,12 +24,59 @@
     <div id="team">
       <h3>The Magic Ingredients.</h3>
       <ul>
-        <li>Rice - <a href="http://twitter.com/sferik">Erik</a></li>
-        <li>Black beans - <a href="http://twitter.com/kev_in">Kevin</a></li>
-        <li>Carnitas - <a href="http://twitter.com/jonelvekrog">Jon</a></li>
-        <li>Salsa - <a href="http://twitter.com/jm3">jm3</a></li>
-        <li>Cheese - <a href="http://twitter.com/takeitez">Vanessa</a></li>
-        <li>Tortilla - <a href="http://twitter.com/ryanemmm">Ryan</a></li>
+        <li>
+          <a href="http://twitter.com/sferik">Erik</a>:
+          <span class="burrito">
+            Rice.
+          </span>
+          <span class="title">
+            Software Architect, Utility Infielder
+          </span>
+        </li>
+        <li>
+          <a href="http://twitter.com/kev_in">Kevin</a>:
+          <span class="burrito">
+            Black beans.
+          </span>
+          <span class="title">
+            Principal Software Engineer, Mayor of Shalaco
+          </span>
+        </li>
+        <li>
+          <a href="http://twitter.com/jonelvekrog">Jon</a>:
+          <span class="burrito">
+            Carnitas.
+          </span>
+          <span class="title">
+          CEO, Chief Goodness Officer
+          </li>
+        <li>
+          <a href="http://twitter.com/jm3">jm3</a>:
+          <span class="burrito">
+            Salsa.
+          </span>
+          <span class="title">
+          VP of UX, ROI leverager
+          </span>
+          </li>
+        <li>
+          <a href="http://twitter.com/takeitez">Vanessa</a>:
+          <span class="burrito">
+            Cheese. 
+          </span>
+          <span class="title">
+            Product Manager, Beacon of Hope
+          </span>
+          </li>
+        <li>
+          <a href="http://twitter.com/ryanemmm">Ryan</a>:
+          <span class="burrito">
+            Tortilla. 
+          </span>
+          <span class="title">
+            Interface Engineer, Fast Talker
+          </span>
+          </li>
       </ul>
     </div>
 
